--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,21 @@
+* {
+  margin: 0;
+}
+
+*::-webkit-scrollbar {
+  width: 5px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: rgb(71, 70, 70);
+  border-radius: 25px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #d3d3d3;
+  border-radius: 25px;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
